welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:2: error: Missing closing brace `}' assumed here
def isFacingTrail():Boolean = { if (getCouleurSol() == Color.green) {return true} else {avance();return false 
^SlugTracking:2: error: expected class or object definition
def isFacingTrail():Boolean = { if (getCouleurSol() == Color.green) {return true} else {avance();return false 
^